feat:a dd webview css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body bgcolor="#000000">
   <iframe
+    id="webview"
     src="https://docs.google.com/presentation/d/e/2PACX-1vSo7mIEXlh3D43vVq_PSulOp1VV1W8bCXE5uM0JuhZjsqnwReg5HZsu2-AK5zrjM1__nj20GPpR78J2/embed?embedded=true&start=true&loop=true&delayms=3000"
     frameborder="0"
     width="100%"
@@ -22,6 +23,7 @@
     mozallowfullscreen="true"
     webkitallowfullscreen="true"
   />
+  <script src="./index.js" ></script>
 </body>
 
 </html>
